Added rich sharing tags

--- a/index.html
+++ b/index.html
@@ -2,11 +2,24 @@
 <html>
     <head>
         <title>Axel Niklasson</title>
+
+        <!-- Meta tags -->
         <meta name="description" content="Personal website for software developer Axel Niklasson.">
         <meta name="keywords" content="Axel, Niklasson, AxelNiklasson, Software, Developer, Chalmers">
         <meta name="author" content="Axel Niklasson">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <!-- Facebook OG -->
+        <meta property="og:title" content="Axel Niklasson" />
+        <meta property="og:description" content="Personal website for software developer Axel Niklasson." />
+        <meta property="og:image" content="https://axelniklasson.se/dist/profile.jpg" />
+
+        <!-- Twitter cards -->
+        <meta name="twitter:card" content="summary" />
+        <meta name="twitter:title" content="Axel Niklasson" />
+        <meta name="twitter:description" content="Personal website for software developer Axel Niklasson." />
+        <meta name="twitter:image" content="https://axelniklasson.se/dist/profile.jpg" />
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="dist/vendor.css">
@@ -182,7 +195,7 @@
                 <div class="row text-center">
                     <div class="col-md-8 col-md-offset-2">
                         <h4>Consultant</h4>
-                        <p class="desc"><a href="http://www.xlent.se/" target="_blank">XLENT</a><br>2016 -</p>
+                        <p class="desc"><a href="http://www.xlent.se/" onclick="ga('send', 'event', 'Employers', 'click', 'XLENT');" target="_blank">XLENT</a><br>2016 -</p>
                         <p>Building mobile applications in <a href="http://phonegap.com/" target="_blank">Phonegap</a> and <a href="https://angularjs.org/" target="_blank">Angular</a>, all the way from "Hello world!" to release in the app stores. Also working with web development, where <a href="https://angularjs.org/" target="_blank">Angular</a> and <a href="http://knockoutjs.com/" target="_blank">Knockout</a> receive most of my current focus. I am also involved in an exciting project, where we're building a brand new web platform for a client based on <a href="http://wordpress.com" target="_blank">Wordpress</a>.</p>
                     </div>
                 </div>
@@ -199,7 +212,7 @@
                 <div class="row text-center">
                     <div class="col-md-8 col-md-offset-2">
                         <h4>Software developer</h4>
-                        <p class="desc"><a href="http://www.arccore.com/" target="_blank">ArcCore</a><br>2014 - 2016</p>
+                        <p class="desc"><a href="http://www.arccore.com/" onclick="ga('send', 'event', 'Employers', 'click', 'ArcCore');" target="_blank">ArcCore</a><br>2014 - 2016</p>
                         <p>Mainly worked with designing and implementing a backend
                         for a customer management system, written in <a href="https://www.djangoproject.com/" target="_blank">Django</a>.</p>
                     </div>
@@ -208,7 +221,7 @@
                 <div class="row text-center">
                     <div class="col-md-8 col-md-offset-2">
                         <h4>Software engineering student</h4>
-                        <p class="desc"><a href="http://www.chalmers.se/en/Pages/default.aspx" target="_blank">Chalmers University of Technology</a><br>2013 - 2016</p>
+                        <p class="desc"><a href="http://www.chalmers.se/en/Pages/default.aspx" onclick="ga('send', 'event', 'Employers', 'click', 'Chalmers');" target="_blank">Chalmers University of Technology</a><br>2013 - 2016</p>
                         <p>Studying to become a software engineer. Just finished my B.Sc. and am currently taking a gap year for work and backpacking.</p>
                     </div>
                 </div>
@@ -241,7 +254,7 @@
         <div class="container text-center">
             <div class="row">
                 <div class="col-md-12">
-                    <p>Designed and developed by <a class="generic-link" href="https://github.com/axelniklasson" target="_blank">axelniklasson</a></p>
+                    <p>Designed and developed by <a class="generic-link" onclick="ga('send', 'event', 'Social', 'click', 'GitHub');" href="https://github.com/axelniklasson" target="_blank">axelniklasson</a></p>
                 </div>
             </div>
         </div>
