--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div id="splashTextWrapper">
                 <span id="name">Axel Niklasson</span><br>
                 <span id="desc">B.Sc. in Software Engineering</span><br><br>
-                <span id="desc">Currently working as a<br>consultant at <strong>XLENT</strong></span><br>
+                <span id="desc">Consultant at <strong>XLENT</strong></span><br>
                 <a class="btn btn-primary" href="#about">Read more</a>
             </div>
         </div>
@@ -84,9 +84,9 @@
                 </div>
                 <div class="col-md-8 text-center">
                     <h3>Hello!</h3>
-                    <p>My name is Axel Niklasson and I am 21 years old. I am currently
+                    <p>My name is Axel Niklasson and I am 22 years old. I am
                     working as a consultant at <a href="http://xlent.se" target="_blank">XLENT</a>, where I mainly focus on web development.</p>
-                    <p>I recently moved to Skåne after finishing my Bachelor's Thesis at Chalmers University of Tecknology and I am currently taking a gap year for work and backpacking in Southeast Asia.</p>
+                    <p>I moved to Skåne a couple of months ago after finishing my Bachelor's Thesis at Chalmers University of Tecknology and I am currently taking a gap year for work and backpacking in Southeast Asia.</p>
                     <p>To find out more about me, my resume can be accessed from below; </p>
                     <a class="resume" href="dist/CV_en.pdf">English</a><span class="resume"> / </span><a class="resume" href="dist/CV.pdf">Swedish</a>
                     <br><br><p>My B.Sc. thesis can be found <a href="dist/thesis.pdf">here</a>.</p>
