--- a/index.html
+++ b/index.html
@@ -146,6 +146,17 @@
 
                 <div class="row text-center">
                     <div class="col-md-8 col-md-offset-2">
+                        <h4>Published two open-source packages</h4>
+                        <p class="desc">November, 2016</p>
+                        <p>I first published a Python package called <a href="https://pypi.python.org/pypi/vasttrafik-api-wrapper/1.0.3" target="_blank">vasttrafik-api-wrapper</a>, which is a wrapper for Västtrafiks API. I started building this package
+                            some time ago, but I recently decided to publishit. The source code can be found <a href="https://github.com/axelniklasson/vasttrafik-api-wrapper" target="_blank">here</a>.</p>
+                        <p>My second package is a work in progress, called <a href="https://www.npmjs.com/package/node-skanetrafiken">node-skanetrafiken</a>, which is a Node.js wrapper for Skånetrafikens Open API.
+                            The source code can be found <a href="https://github.com/axelniklasson/node-skanetrafiken" target="_blank">here</a>.</p>
+                    </div>
+                </div>
+
+                <div class="row text-center">
+                    <div class="col-md-8 col-md-offset-2">
                         <h4>Working, diving and playing with a new GoPro</h4>
                         <p class="desc">September, 2016</p>
                         <p>As mentioned, working and diving pretty much sums up my life right about now. I also bought a GoPro Hero 4 Silver, which is an incredibly entertaining toy.</p>
@@ -169,16 +180,6 @@
                         <p class="desc">June, 2016</p>
                         <p>Since I was unable to find a blog tool that suited me, I started designing and implementing my own. The tool is called <a href="http://github.com/axelniklasson/WriterCMS.git" target="_blank">WriterCMS</a> and I have actually made progress really fast. At the moment, creating and managing posts along with categories are working as intended along with authentication and some other good stuff.</p>
                         <p>You can check it out in action <a href="https://resa.axelniklasson.se" target="_blank">here</a>! (Swedish content)</p>
-                    </div>
-                </div>
-
-                <div class="row text-center">
-                    <div class="col-md-8 col-md-offset-2">
-                        <h4>Participated in <a href="http://www.gcdc.net/en/" target="_blank">GCDC</a> in the Netherlands</h4>
-                        <p class="desc">End of May, 2016</p>
-                        <p>Our B.Sc. group went to Helmond, just outside Eindhoven, for about a week where we installed our HMI in Chalmers' car and participated in the competition. We were part of a team with a bunch of great people and had loads of fun. Our team finished in fourth place of ten cars, but our HMI was named as one of the best, so overall a great experience.</p>
-                        <p>Our very own producer, David Bergström, made a video documenting our trip to the Netherlands, which can be watched below.</p><br>
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/xMh_tibU0Lk" frameborder="0" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
