--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
         <meta property="og:image" content="https://axelniklasson.se/dist/profile.jpg" />
 
         <!-- Twitter cards -->
-        <meta name="twitter:card" content="summary" />
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:site" content="axelniklasson.se" />
+        <meta name="twitter:creator" content="Axel Niklasson" />
         <meta name="twitter:title" content="Axel Niklasson" />
         <meta name="twitter:description" content="Personal website for software developer Axel Niklasson." />
-        <meta name="twitter:image" content="https://axelniklasson.se/dist/profile.jpg" />
+        <meta name="twitter:image" content="https://axelniklasson.se/dist/background.png" />
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="dist/vendor.css">
