Fix FB OG image

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- Facebook OG -->
         <meta property="og:title" content="Axel Niklasson" />
         <meta property="og:description" content="Personal website for software developer Axel Niklasson." />
-        <meta property="og:image" content="https://axelniklasson.se/dist/profile.jpg" />
+        <meta property="og:image" content="https://axelniklasson.se/dist/background.png" />
 
         <!-- Twitter cards -->
         <meta name="twitter:card" content="summary_large_image" />
