--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
 
         <!-- Twitter cards -->
         <meta name="twitter:card" content="summary_large_image" />
-        <meta name="twitter:site" content="axelniklasson.se" />
-        <meta name="twitter:creator" content="Axel Niklasson" />
+        <meta name="twitter:site" content="@axel_niklasson" />
+        <meta name="twitter:creator" content="@axel_niklasson" />
         <meta name="twitter:title" content="Axel Niklasson" />
         <meta name="twitter:description" content="Personal website for software developer Axel Niklasson." />
         <meta name="twitter:image" content="https://axelniklasson.se/dist/background.png" />
 
+        <!-- Styles -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="dist/vendor.css">
         <link rel="stylesheet" type="text/css" href="dist/styles.css">
@@ -150,8 +151,8 @@
                     <div class="col-md-8 col-md-offset-2">
                         <h4>Published two open-source packages</h4>
                         <p class="desc">November, 2016</p>
-                        <p>I first published a Python package called <a href="https://pypi.python.org/pypi/vasttrafik-api-wrapper/1.0.3" target="_blank">vasttrafik-api-wrapper</a>, which is a wrapper for Västtrafiks API. I started building this package
-                            some time ago, but I recently decided to publishit. The source code can be found <a href="https://github.com/axelniklasson/vasttrafik-api-wrapper" target="_blank">here</a>.</p>
+                        <p>I first published a Python package called <a href="https://pypi.python.org/pypi/PyTrafik/0.2" target="_blank">PyTrafik</a>, which is a wrapper for Västtrafiks API. I started building this package
+                            some time ago, but I recently decided to publishit. The source code can be found <a href="https://github.com/axelniklasson/PyTrafik" target="_blank">here</a>.</p>
                         <p>My second package is a work in progress, called <a href="https://www.npmjs.com/package/node-skanetrafiken">node-skanetrafiken</a>, which is a Node.js wrapper for Skånetrafikens Open API.
                             The source code can be found <a href="https://github.com/axelniklasson/node-skanetrafiken" target="_blank">here</a>.</p>
                     </div>
