--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     <div class="row post" ng-repeat="post in posts">
                         <div class="col-md-4">
                             <img ng-if="post.images.length > 0" class="img-circle img-responsive" ng-src="{{ post.images[0] }}" alt="">
-                            <img ng-if="post.images.length == 0" class="img-circle img-responsive" ng-src="http://66.media.tumblr.com/3dbf290f6477026a098a8369e1d96665/tumblr_mj9jshtzH01qadknpo1_1280.jpg" alt="">
+                            <img ng-if="post.images.length == 0" class="img-circle img-responsive" src="dist/fallback.jpg" alt="">
                         </div>
 
                         <div class="col-md-8 text-left">
