--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                     <ul class="nav navbar-nav">
 
                         <li class="menuItem"><a href="#about">About me</a></li>
-                        <li class="menuItem"><a href="#skillset">Skillset</a></li>
-                        <li class="menuItem"><a href="#latest">Latest</a></li>
+                        <!-- <li class="menuItem"><a href="#skillset">Skillset</a></li> -->
+                        <li class="menuItem"><a href="#latest">Latest posts</a></li>
                         <li class="menuItem"><a href="#experience">Experience</a></li>
                         <li class="menuItem"><a href="#contact">Contact</a></li>
                     </ul>
