Changed job title

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <div class="col-md-8 text-center">
                     <h3>Hello!</h3>
                     <p>My name is Axel Niklasson and I am 22 years old. I am currently a M. Sc. student at
-                    <a href="http://www.chalmers.se/en/education/programmes/masters-info/Pages/Computer-systems-and-networks.aspx" target="_blank">Chalmers</a>, on my way to becoming a software engineer. I also work as a Student Brand Manager at <a href="https://www.netlight.com/">Netlight</a>, where
+                    <a href="http://www.chalmers.se/en/education/programmes/masters-info/Pages/Computer-systems-and-networks.aspx" target="_blank">Chalmers</a>, on my way to becoming a software engineer. I also work as a Brand Manager at <a href="https://www.netlight.com/">Netlight</a>, where
                     I help them reach out to awesome students at Chalmers.</p>
                     <p>I do other stuff as well. I love hacking on my own projects, hang out with friends and try to work out a couple of times a week as well.
                     I also love scuba diving and tend to dive whenever I get the chance.</p>
@@ -104,7 +104,7 @@
 
             <div class="row text-center">
                 <div class="col-md-8 col-md-offset-2">
-                    <h4>Student Brand Manager</h4>
+                    <h4>Brand Manager</h4>
                     <h6>Current position</h6>
                     <p class="desc"><a href="http://www.netlight.com/" onclick="ga('send', 'event', 'Employers', 'click', 'Netlight');" target="_blank">Netlight</a><br>2017 -</p>
                     <p>Helping Netlight reach out to students and at the same time making sure that Netlight is present on campus.</p>
