Added job title to splash

--- a/index.html
+++ b/index.html
@@ -67,8 +67,12 @@
     <div id="splash">
         <div id="splashTextWrapper">
             <span id="name">Axel Niklasson</span><br>
-            <span id="desc">M. Sc. student at <strong>Chalmers University of Technology</strong></span><br><br>
+            <span id="desc">
+                M. Sc. student at <strong>Chalmers University of Technology</strong><br>
+                Brand Manager at <strong>Netlight</strong>
+            </span><br><br>
             <a class="btn btn-primary" href="#about">More about me</a>
+
         </div>
     </div>
 
