--- a/index.html
+++ b/index.html
@@ -150,8 +150,16 @@
             <h1>Contact</h1>
             <p class="desc">Say hello!</p>
             <hr class="primary">
+
             <div class="col-md-8 col-md-offset-2">
-                <p>Don't hesitate to send me an email at <a href="mailto:hello@axelniklasson.se">hello@axelniklasson.se</a> and I will get back to you as soon as possible.</p>
+                <form id="contact-form">
+                    <input id="form-name" type="text" placeholder="Name *" required>
+                    <input id="form-email" type="text" placeholder="Email *" required>
+                    <textarea id="form-message" placeholder="Message *" required></textarea>
+                    <p id="success-message">Message sent! I will get back to you as soon as possible.</p>
+                    <p id="error-message">Something went wrong.. Please send me an email to hello@axelniklasson.se and we'll take it from there instead.</p>
+                    <button type="submit" name="button">Send message</button>
+                </form>
             </div>
         </div>
     </section>
@@ -161,14 +169,14 @@
     <div class="container text-center">
         <div class="row">
             <div class="col-md-12">
-                <p>Check out my <a class="generic-link" onclick="ga('send', 'event', 'Social', 'click', 'GitHub');" href="https://github.com/axelniklasson" target="_blank">GitHub</a></p>
+                <p>Feel free to check out my other projects at my <a class="generic-link" onclick="ga('send', 'event', 'Social', 'click', 'GitHub');" href="https://github.com/axelniklasson" target="_blank">GitHub</a></p>
             </div>
         </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-    <script src="dist/vendor.js"></script>
+    <!-- <script src="dist/vendor.js"></script> -->
     <script src="dist/scripts.js"></script>
     </body>
 </html>
