--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="collapse navbar-collapse navbar-right navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li class="menuItem"><a href="#about">About me</a></li>
-                    <!-- <li class="menuItem"><a href="#projects">Projects</a></li> -->
+                    <li class="menuItem"><a href="#portfolio">Portfolio</a></li>
                     <li class="menuItem"><a href="#experience">Experience</a></li>
                     <li class="menuItem"><a href="#contact">Contact</a></li>
                 </ul>
@@ -95,6 +95,41 @@
                     <p>I have also made my resume available in <a href="dist/CV_en.pdf">English</a> and <a href="dist/CV.pdf">Swedish</a>.</p>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <hr class="divider">
+
+    <section id="portfolio">
+        <div class="container text-center">
+            <h1>Portfolio</h1>
+            <p class="desc">Some of my projects from my spare time</p>
+            <hr class="primary">
+
+            <div class="row portfolio-grid">
+                <div class="col-xs-12 col-md-6 portfolio-item shadow">
+                    <h3>node-skanetrafiken</h3>
+                    <p>Node.js package for public transportation organization Skånetrafikens Open API. The package is published on NPM.</p>
+                    <p><a href="https://github.com/axelniklasson/node-skanetrafiken" target="_blank" onclick="ga('send', 'event', 'Portolio', 'click', 'node-skanetrafiken');">Source code</a></p>
+                </div>
+                <div class="col-xs-12 col-md-6 portfolio-item shadow">
+                    <h3>WriterCMS</h3>
+                    <p>Fully-fledged CMS developed by me and used during backpacking in Asia for six months as a blog tool. The blog is available
+                    <a href="https://resa.axelniklasson.se" target="_blank">here</a>, but all content is in Swedish.</p>
+                    <p><a href="https://github.com/WriterCMS" target="_blank" onclick="ga('send', 'event', 'Portolio', 'click', 'WriterCMS');">Source code</a></p>
+                </div>
+                <div class="col-xs-12 col-md-6 portfolio-item shadow">
+                    <h3>ScubaLog</h3>
+                    <p>Web application used to log dives and connect with diving buddies. Not released yet, but I currently use it as my personal dive log.</p>
+                    <p><a href="https://github.com/scubalog-io" target="_blank" onclick="ga('send', 'event', 'Portolio', 'click', 'ScubaLog');">Source code</a></p>
+                </div>
+                <div class="col-xs-12 col-md-6 portfolio-item shadow">
+                    <h3>PyTrafik</h3>
+                    <p>Python package that encapsulates public transportation organization Västtrafiks API. Published on PyPi and was one of my first pet projects.</p>
+                    <p><a href="https://github.com/axelniklasson/PyTrafik" target="_blank" onclick="ga('send', 'event', 'Portolio', 'click', 'PyTrafik');">Source code</a></p>
+                </div>
+            </div>
+
         </div>
     </section>
 
