--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div id="splashTextWrapper">
             <span id="name">Axel Niklasson</span><br>
             <span id="desc">
-                M. Sc. student at <strong>Chalmers University of Technology</strong><br>
+                M.Sc. student at <strong>Chalmers University of Technology</strong><br>
                 Brand Manager at <strong>Netlight</strong>
             </span><br><br>
             <a class="btn btn-primary" href="#about">More about me</a>
@@ -87,9 +87,10 @@
                 </div>
                 <div class="col-md-8 text-center">
                     <h3>Hello!</h3>
-                    <p>My name is Axel Niklasson and I am 23 years old. I am currently a M. Sc. student at
-                    <a href="http://www.chalmers.se/en/education/programmes/masters-info/Pages/Computer-systems-and-networks.aspx" target="_blank">Chalmers</a>, on my way to becoming a software engineer. I also work as a Brand Manager at <a href="https://www.netlight.com/">Netlight</a>, where
+                    <p>My name is Axel Niklasson and I am 23 years old. I am currently a M.Sc. student in
+                    <a href="http://www.chalmers.se/en/education/programmes/masters-info/Pages/Computer-systems-and-networks.aspx" target="_blank">Computer Systems and Networks</a> at Chalmers, where I am on my way to becoming a software engineer with focus on security. I also work as a Brand Manager at <a href="https://www.netlight.com/">Netlight</a>, where
                     I help them reach out to awesome students at Chalmers.</p>
+
                     <p>I do other stuff as well. I love hacking on my own projects, hang out with friends and try to work out a couple of times a week as well.
                     I also love scuba diving and tend to dive whenever I get the chance.</p>
                     <p>I have also made my resume available in <a href="dist/CV_en.pdf">English</a> and <a href="dist/CV.pdf">Swedish</a>.</p>
@@ -204,7 +205,11 @@
     <div class="container text-center">
         <div class="row">
             <div class="col-md-12">
-                <p>Feel free to check out my other projects at my <a class="generic-link" onclick="ga('send', 'event', 'Social', 'click', 'GitHub');" href="https://github.com/axelniklasson" target="_blank">GitHub</a></p>
+                <p>
+                    <a onclick="ga('send', 'event', 'Social', 'click', 'LinkedIn');" href="https://se.linkedin.com/in/axel-niklasson-a1b43287" target="_blank">LinkedIn</a> | 
+                    <a onclick="ga('send', 'event', 'Social', 'click', 'GitHub');" href="https://github.com/axelniklasson" target="_blank">GitHub</a> | 
+                    <a onclick="ga('send', 'event', 'Social', 'click', 'API');" href="https://api.axelniklasson.se" target="_blank">API</a>
+                </p>
             </div>
         </div>
     </div>
