--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
                 <div class="col-md-8 text-center">
                     <h3>Hello!</h3>
                     <p>My name is Axel Niklasson and I am 23 years old. I am currently a M.Sc. student in
-                    <a href="http://www.chalmers.se/en/education/programmes/masters-info/Pages/Computer-systems-and-networks.aspx" target="_blank">Computer Systems and Networks</a> at Chalmers, where I am on my way to becoming a software engineer with focus on security. I also work as a Brand Manager at <a href="https://www.netlight.com/">Netlight</a>, where
+                    <a href="http://www.chalmers.se/en/education/programmes/masters-info/Pages/Computer-systems-and-networks.aspx" target="_blank">Computer Systems and Networks</a> at Chalmers, where I am on my way to becoming a software engineer with focus on security. I work as a Brand Manager at <a href="https://www.netlight.com/">Netlight</a> alongside my studies, where
                     I help them reach out to awesome students at Chalmers. In December 2017, I also started working as a developer at <a href="https://nouw.com" target="_blank">Nouw Media</a>.</p>
 
                     <p>I do other stuff as well. I love hacking on my own projects, hang out with friends and try to work out a couple of times a week as well.
                     I also love scuba diving and tend to dive whenever I get the chance.</p>
-                    <p>I have also made my resume available in <a href="dist/CV_en.pdf">English</a> and <a href="dist/CV.pdf">Swedish</a>.</p>
+                    <p>My resume is available in <a href="dist/CV_en.pdf">English</a> and <a href="dist/CV.pdf">Swedish</a>.</p>
                 </div>
             </div>
         </div>
