Rename job title

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <span id="name">Axel Niklasson</span><br>
             <span id="desc">
                 M.Sc. student at <strong>Chalmers University of Technology</strong><br>
-                Developer at <strong>Nouw Media</strong><br>
+                Software developer at <strong>Nouw Media</strong><br>
                 Brand Manager at <strong>Netlight</strong>
             </span><br><br>
             <a class="btn btn-primary" href="#about">More about me</a>
@@ -90,7 +90,7 @@
                     <h3>Hello!</h3>
                     <p>My name is Axel Niklasson and I am 23 years old. I am currently a M.Sc. student in
                     <a href="http://www.chalmers.se/en/education/programmes/masters-info/Pages/Computer-systems-and-networks.aspx" target="_blank">Computer Systems and Networks</a> at Chalmers, where I am on my way to becoming a software engineer with focus on security. I work as a Brand Manager at <a href="https://www.netlight.com/">Netlight</a> alongside my studies, where
-                    I help them reach out to awesome students at Chalmers. In December 2017, I also started working as a developer at <a href="https://nouw.com" target="_blank">Nouw Media</a>.</p>
+                    I help them reach out to awesome students at Chalmers. In December 2017, I also started working as a software developer at <a href="https://nouw.com" target="_blank">Nouw Media</a>.</p>
 
                     <p>I do other stuff as well. I love hacking on my own projects, hang out with friends and try to work out a couple of times a week as well.
                     I also love scuba diving and tend to dive whenever I get the chance.</p>
@@ -145,7 +145,7 @@
 
             <div class="row text-center">
                 <div class="col-md-8 col-md-offset-2">
-                    <h4>Developer</h4>
+                    <h4>Software developer</h4>
                     <h6>Current position</h6>
                     <p class="desc"><a href="https://nouw.com/" onclick="ga('send', 'event', 'Employers', 'click', 'Nouw');" target="_blank">Nouw Media</a><br>2017 -</p>
                     <p>Frontend development with focus on React/Redux, but also more general web and systems development.</p>
