--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <span id="desc">
                 M.Sc. student at <strong>Chalmers University of Technology</strong><br>
                 Software developer at <strong>Nouw Media</strong><br>
-                Brand Manager at <strong>Netlight</strong>
+                Brand manager at <strong>Netlight</strong>
             </span><br><br>
             <a class="btn btn-primary" href="#about">More about me</a>
 
@@ -89,7 +89,7 @@
                 <div class="col-md-8 text-center">
                     <h3>Hello!</h3>
                     <p>My name is Axel Niklasson and I am 23 years old. I am currently a M.Sc. student in
-                    <a href="http://www.chalmers.se/en/education/programmes/masters-info/Pages/Computer-systems-and-networks.aspx" target="_blank">Computer Systems and Networks</a> at Chalmers, where I am on my way to becoming a software engineer with focus on security. I work as a Brand Manager at <a href="https://www.netlight.com/">Netlight</a> alongside my studies, where
+                    <a href="http://www.chalmers.se/en/education/programmes/masters-info/Pages/Computer-systems-and-networks.aspx" target="_blank">Computer Systems and Networks</a> at Chalmers, where I am on my way to becoming a software engineer with focus on security. I work as a Brand manager at <a href="https://www.netlight.com/">Netlight</a> alongside my studies, where
                     I help them reach out to awesome students at Chalmers. In December 2017, I also started working as a software developer at <a href="https://nouw.com" target="_blank">Nouw Media</a>.</p>
 
                     <p>I do other stuff as well. I love hacking on my own projects, hang out with friends and try to work out a couple of times a week as well.
@@ -154,7 +154,7 @@
 
             <div class="row text-center">
                 <div class="col-md-8 col-md-offset-2">
-                    <h4>Brand Manager</h4>
+                    <h4>Brand manager</h4>
                     <h6>Current position</h6>
                     <p class="desc"><a href="http://www.netlight.com/" onclick="ga('send', 'event', 'Employers', 'click', 'Netlight');" target="_blank">Netlight</a><br>2017 -</p>
                     <p>Helping Netlight reach out to students and at the same time making sure that Netlight is present on campus.</p>
