--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,18 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+
+    <!-- Meta tags -->
+    <meta name="description" content="Personal website for software developer Axel Niklasson.">
+    <meta name="keywords" content="Axel, Niklasson, AxelNiklasson, Software, Developer, Chalmers, Engineering">
+    <meta name="author" content="Axel Niklasson">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Facebook OG -->
+    <meta property="og:title" content="Axel Niklasson" />
+    <meta property="og:description" content="Personal website for software developer Axel Niklasson." />
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -19,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Axel Niklasson</title>
   </head>
   <body>
     <noscript>
