--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,9 @@
     <meta property="og:title" content="Axel Niklasson" />
     <meta property="og:description" content="Personal website for software developer Axel Niklasson." />
 
+    <!-- Font -->
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet">
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
