--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <meta name="keywords" content="Axel, Niklasson, AxelNiklasson, Software, Developer, Chalmers, Engineering">
     <meta name="author" content="Axel Niklasson">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
     <!-- Facebook OG -->
     <meta property="og:title" content="Axel Niklasson" />
